# dpu-accelerator-offload

./: DPDK_VERSION  README.md  meson.build  meson_options.txt
.github/workflows/: build-cn10k-ml.yml  build-cn10k-nginx.yml  build-cn10k-openssl-engine.yml  build-cn10k-ovs.yml  build-cn10k-snort.yml  build-cn10k.yml  build-cn9k-nginx.yml  build-cn9k-openssl-engine.yml  debug-openssl.yml  debug-ovs.yml
app/ovs-offload/: meson.build
app/ovs-offload/control/: ood_flow_ctrl.c
app/ovs-offload/init/: ood_eth_init.c  ood_repr_init.c
app/secgw-graph/: main.c
app/secgw-graph/devices/: secgw_ethdev.c  secgw_tap.c
app/smart-nic/: meson.build
app/smart-nic/cli/: smc_ethdev.c
app/virtio-l2fwd/: l2_eth_rx.c  l2_virtio_rx.c  virtio_l2fwd.c
ci/checkpatch/: run_license_check.sh  run_sanity_check.sh
ci/test/env/: cn10k-ovs.env  cn10k-virtio-perf.env  cn10k.env
config/: arm64_cn9k_linux_gcc  meson.build
doc/api/: doxy-api-index.md
doc/guides/: index.rst
kmod/: meson.build
lib/: meson.build
lib/common/: dao_dma.h  dma.c  meson.build
lib/featurearc/: meson.build
lib/flow/: flow_dbg.c  meson.build
lib/netlink/: meson.build
lib/pal/: meson.build
lib/pem/: dao_pem.h  meson.build  pem.c  pem.h  sdp.c  sdp.h
lib/portgroup/: meson.build
lib/vfio/: dao_vfio.c  dao_vfio.h  meson.build
lib/virtio/: meson.build  virtio_dev.c  virtio_dev_priv.h
lib/virtio_net/: meson.build  virtio_net_deq.c  virtio_net_enq.c  virtio_net_priv.h  virtio_netdev.c
lib/workers/: meson.build
tests/bar-rw/: main.c
tests/virtio-extbuf/: virtio_extbuf_main.c
(+33 files in other folders)
